force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Core property object for luxury property management system</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Property</label><nameField><label>Property Name</label><type>Text</type></nameField><pluralLabel>Properties</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>