force-app/main/default/objects/Property__c/fields/Address__c.field-meta.xml
<CustomField><fullName>Address__c</fullName><description>Full property address</description><externalId>false</externalId><label>Address</label><length>255</length><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Text</type><unique>false</unique></CustomField>