force-app/main/default/objects/Property__c/fields/Market_Value__c.field-meta.xml
<CustomField><fullName>Market_Value__c</fullName><description>Current market value of the property</description><externalId>false</externalId><label>Market Value</label><precision>18</precision><required>false</required><scale>2</scale><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Currency</type></CustomField>