force-app/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField><fullName>Property_Type__c</fullName><description>Type of property - Residential, Commercial, Mixed-use</description><externalId>false</externalId><label>Property Type</label><required>true</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Residential</fullName><default>false</default><label>Residential</label></value><value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value><value><fullName>Mixed-use</fullName><default>false</default><label>Mixed-use</label></value><value><fullName>Luxury Residential</fullName><default>false</default><label>Luxury Residential</label></value></valueSetDefinition></valueSet></CustomField>