force-app/main/default/objects/Property__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><description>Current status of the property</description><externalId>false</externalId><label>Status</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Active</fullName><default>true</default><label>Active</label></value><value><fullName>Under Renovation</fullName><default>false</default><label>Under Renovation</label></value><value><fullName>For Sale</fullName><default>false</default><label>For Sale</label></value><value><fullName>Sold</fullName><default>false</default><label>Sold</label></value></valueSetDefinition></valueSet></CustomField>