force-app/main/default/objects/Property__c/fields/Total_Units__c.field-meta.xml
<CustomField><fullName>Total_Units__c</fullName><description>Total number of rentable units in property</description><externalId>false</externalId><label>Total Units</label><precision>5</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Number</type><unique>false</unique></CustomField>